# Nums-methods

./: CMakeLists.txt  ConsoleApp1.sln
ConsoleApp1/: Program.cs  Sweep_method.cs
matrix/: CMakeLists.txt  matrix.cpp  matrix.h
methods/: CMakeLists.txt
methods/Gauss/: CMakeLists.txt  Gauss.cpp  Gauss.h  input.txt  main.cpp
methods/sweep_method/: Matrix.cs  Program.cs  input
